--- a/3_UpperCaseConverter/index.html
+++ b/3_UpperCaseConverter/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Upper Case Converter</title>
-    <script src="/angular.min.js"></script>
+    <script src="/Coursera-AngularJS/angular.min.js"></script>
     <script src="app.js"></script>
 </head>
 <body>
