--- a/module1_solution/index.html
+++ b/module1_solution/index.html
@@ -23,7 +23,7 @@
     </div>
 
 
-    <script src="/angular.min.js"></script>
+    <script src="/Coursera-AngularJS/angular.min.js"></script>
     <script src="app.js"></script>
 </body>
 </html>
